2009-11-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Plug another leak in TCL_EVAL_DIRECT
	evaluation.

	* generic/tclObj.c:	Plug memory leak in TclContinuationsEnter().
	[Bug 2895323]

2009-11-09  Stuart Cassoff <stwo@users.sf.net>

	* win/README: [bug 2459744]: Removed outdated Msys + Mingw info.

2009-11-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c (TclEvalObjEx):	Plug memory leak in 
	TCL_EVAL_DIRECT evaluation.

	* tests/info.test:	Resolve ambiguous resolution of variable "res".

2009-11-03  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.8 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.8 release.

2009-11-03  Andreas Kupries  <andreask@activestate.com>

	* library/safe.tcl (::safe::InterpSetConfig): [Bug 2854929]. Added
	code to recursively find deeper paths which may contain modules.
	Required to handle modules with names like 'platform::shell',
	which translate into 'platform/shell-X.tm', i.e arbitrarily deep
	subdirectories.

2009-11-03  Kevin B. Kenny  <kennykb@acm.org>
	
	* library/tzdata/Asia/Novokuznetsk: New tzdata locale for
	Kemerovo oblast', which now keeps Novosibirsk time and not
	Kranoyarsk time.
	* library/tzdata/Asia/Damascus: Syrian DST changes.
	* library/tzdata/Asia/Hong_Kong: Hong Kong historic DST corrections.
	Olson tzdata2009q.

2009-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/tcltest.test: Backport permissions fix for Win7.

2009-10-31  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclBasic.c (ExprRoundFunc): [Bug 2889593]: Correctly report
	the expected number of arguments when generating an error for round().

2009-10-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	[Bug 2800740]: Changed the typedef for the
	mp_digit type from: